# MITgcm_BC_IC

./: .gitignore  .pre-commit-config.yaml  BC_Time_interpolator.py  BC_files_gen.py  BC_files_gen_PHYS.py  IC_files_gen.py  TimeList_generator.py  Time_interpolator.py  Varlist_generator.py  compute_EFAS_daily_clim_NAD.py  compute_EFAS_daily_historical_maps_discharges_2011_2023.py  cutter.sh  data_extractor.py  efas.sh  genUserDateList.py  general.py  getDailyBIOFromArchive.sh  getRST__BIOFromArchive.sh  get_EFAS_daily_discharge.py  get_cut_Locations.py  get_daily_flux_file.py  grib_meteo_generator.py  high_var_list.py  interpolator.py  mainMeteo.sh  main_ICBC_AZA_Lazio.slurm  main_ICBC_Adios.sh  main_ICBC_Cadeau_OP.sh  main_ICBC_GoT.sh  main_ICBC_GoT_fluxus.sh  main_ICBC_Nadri.sh  main_relocatable.sh  main_sequence.sh  maskgen_006_014.py  meteo_generator.py  ogstm_cutter.py  products_converter.py  profile.inc  pyproject.toml  read_XLS.py  (+4 more)
mitgcm/bc_ic/: BC_Time_interpolator.py  BC_files_gen.py  BC_files_gen_PHYS.py  IC_files_gen.py  MIT_cutter.py  README.md  Time_interpolator.py  cmems_product.json  download_efas_forecast.py  download_efas_historical.py  general.py  getForcingsFromArchive.sh  get_EFAS_daily_discharge.py  get_V4_Archive_Date_Info.sh  get_cut_Locations.py  get_daily_flux_file.py  high_var_list.py  main_ICBC_AZA_Lazio.slurm  main_ICBC_Cadeau.sh  main_ICBC_Gabes.sh  main_relocatable.sh  maskgen_006_014.py  meteo_generator.py  meteo_generator_GRIB.py  nco_indexer.sh  (+6 more)
static-data/: InterpVarNamesM  ModelVarNames  creating_csv_README.md  creating_csv_README.txt
(+48 files in other folders)
