[tool.poetry]
name = "mitgcm.bc_ic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mitgcm"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
netcdf4 = "^1.7.1.post2"
scipy = "^1.14.1"
pandas = "^2.2.3"
xarray = "^2024.9.0"
bitsea = { git = "https://github.com/exactlab/bit.sea.git", branch = "vendored" }


[tool.poetry.group.dev.dependencies]
deptry = "^0.20.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# External tools

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.docformatter]
style = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
omit = ["tests/*"]
